# RunRemote

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/runremote/: __main__.py
