[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
[project]
name = "runremote"
version = "1.0.1"
authors = [
  { name="Highghlow", email="highghlow@proton.me" },
]
description = "Run executables remotely through ssh"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/highghlow/RunRemote"
"Bug Tracker" = "https://github.com/highghlow/RunRemote/issues"